[gd_scene load_steps=23 format=2]

[ext_resource path="res://data/UI/nodes/game_settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/scripts/ui.gd" type="Script" id=5]
[ext_resource path="res://data/graphics/speech_bubble.png" type="Texture" id=6]
[ext_resource path="res://data/graphics/UI/phone.png" type="Texture" id=7]
[ext_resource path="res://data/graphics/UI/inventory.png" type="Texture" id=8]
[ext_resource path="res://data/fonts/ReemKufi-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://data/graphics/UI/map.png" type="Texture" id=10]
[ext_resource path="res://data/graphics/UI/calendar.png" type="Texture" id=11]
[ext_resource path="res://data/graphics/saves/screenshot.png" type="Texture" id=12]
[ext_resource path="res://data/fonts/segoe.font" type="BitmapFont" id=14]
[ext_resource path="res://data/asset scenes/calendar_UI.tscn" type="PackedScene" id=15]
[ext_resource path="res://data/asset scenes/settings.tscn" type="PackedScene" id=17]
[ext_resource path="res://data/asset scenes/phone_ui.tscn" type="PackedScene" id=18]
[ext_resource path="res://data/asset scenes/schoolbag_UI.tscn" type="PackedScene" id=19]
[ext_resource path="res://data/asset scenes/map_ui.tscn" type="PackedScene" id=20]

[sub_resource type="DynamicFont" id=1]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 15
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="CircleShape2D" id=4]
radius = 56.4041

[sub_resource type="CircleShape2D" id=5]
radius = 53.0022

[sub_resource type="CircleShape2D" id=6]
radius = 47.2968

[sub_resource type="CircleShape2D" id=7]
radius = 52.1685

[node name="ui" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dateLabel" type="Label" parent="."]
margin_left = 1500.0
margin_top = 899.0
margin_right = 1882.0
margin_bottom = 961.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.550763, 0.538559, 0.761719, 1 )
text = "Monday, 8 AM"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointsLabel" type="Label" parent="."]
visible = false
margin_left = 1764.0
margin_top = 7.0
margin_right = 1857.0
margin_bottom = 69.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 14 )
text = "240"

[node name="descriptionLabel" type="Label" parent="."]
margin_left = 890.0
margin_top = 884.0
margin_right = 1049.0
margin_bottom = 946.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thoughtBubble" type="Label" parent="."]
visible = false
margin_left = -185.998
margin_top = 1015.0
margin_right = -26.9977
margin_bottom = 1077.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "text"
align = 1

[node name="bubble" type="Sprite" parent="thoughtBubble"]
position = Vector2( 77.9949, 17.8947 )
z_index = -99
texture = ExtResource( 6 )

[node name="materialize" type="Tween" parent="thoughtBubble"]

[node name="dissolve" type="Tween" parent="thoughtBubble"]

[node name="settings" parent="." instance=ExtResource( 17 )]

[node name="inventory" type="Area2D" parent="." groups=[
"UI_icons",
]]
position = Vector2( 235, 536 )

[node name="Sprite" type="Sprite" parent="inventory"]
position = Vector2( 579.032, 463.226 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="inventory"]
position = Vector2( 575.795, 466.592 )
shape = SubResource( 4 )

[node name="phone" type="Area2D" parent="." groups=[
"UI_icons",
]]
position = Vector2( 319, 473 )

[node name="Sprite" type="Sprite" parent="phone"]
position = Vector2( 652.041, 526.164 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="phone"]
position = Vector2( 650.415, 519.668 )
shape = SubResource( 5 )

[node name="map" type="Area2D" parent="." groups=[
"UI_icons",
]]
position = Vector2( 550, 407 )

[node name="Sprite" type="Sprite" parent="map"]
position = Vector2( 568.962, 589.103 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map"]
position = Vector2( 565.873, 587.915 )
shape = SubResource( 6 )

[node name="calendar" type="Area2D" parent="." groups=[
"UI_icons",
]]

[node name="Sprite" type="Sprite" parent="calendar"]
position = Vector2( 1815.76, 997.246 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="calendar"]
position = Vector2( 1821.16, 1004 )
shape = SubResource( 7 )

[node name="phone_ui" parent="." instance=ExtResource( 18 )]
z_index = 99

[node name="schoolbag_ui" parent="." instance=ExtResource( 19 )]
position = Vector2( 666.235, 1087.7 )
z_index = 98

[node name="map_ui" parent="." instance=ExtResource( 20 )]
position = Vector2( 209.654, 1078.39 )
scale = Vector2( 1.5, 1.6 )
z_index = 97

[node name="calendar_ui" parent="." instance=ExtResource( 15 )]
position = Vector2( 274.88, 1076.54 )
z_index = 96

[node name="cursor_default" type="Panel" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="Sprite" parent="."]
visible = false
position = Vector2( 959.825, 540.366 )
z_index = 1
texture = ExtResource( 12 )

[node name="dummy_node" type="Area2D" parent="."]
visible = false

[node name="dummy_tween" type="Tween" parent="dummy_node"]

[node name="game_settings" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="mouse_entered" from="inventory" to="." method="_on_schoolbag_mouse_entered"]
[connection signal="mouse_exited" from="inventory" to="." method="_on_schoolbag_mouse_exited"]
[connection signal="mouse_entered" from="phone" to="." method="_on_phone_mouse_entered"]
[connection signal="mouse_exited" from="phone" to="." method="_on_phone_mouse_exited"]
[connection signal="mouse_entered" from="map" to="." method="_on_map_mouse_entered"]
[connection signal="mouse_exited" from="map" to="." method="_on_map_mouse_exited"]
[connection signal="mouse_entered" from="calendar" to="." method="_on_calendar_mouse_entered"]
[connection signal="mouse_exited" from="calendar" to="." method="_on_calendar_mouse_exited"]
[connection signal="tween_completed" from="dummy_node/dummy_tween" to="." method="_on_dummy_tween_tween_completed"]
